# rust-miniprojects

./: .gitignore  README.md  test.sh
.github/workflows/: lint.yml  release.yml  rust.yml  rustfmt.yml  tests.yml
coding_contest/: Cargo.toml  README.md
coding_contest/src/: lib.rs  main.rs
currency-converter/: Cargo.toml  README.md
currency-converter/src/: lib.rs  main.rs
digital-clock/: Cargo.toml  README.md
digital-clock/src/: lib.rs  main.rs
fibonacci/: Cargo.toml  README.md
fibonacci/src/: lib.rs  main.rs
hackernews-rs/: Cargo.toml  README.md
hackernews-rs/src/: lib.rs  main.rs
health-analysis/: Cargo.toml
health-analysis/src/: lib.rs  main.rs
health-classification/: Cargo.toml
health-classification/src/: lib.rs  main.rs
int_conversion/: Cargo.toml  README.md
int_conversion/src/: lib.rs  main.rs
iris-classification/: Cargo.toml  README.md
iris-classification/src/: lib.rs  main.rs
mouse-hacker/: Cargo.toml  README.md
mouse-hacker/src/: lib.rs  main.rs
pig-latin/: Cargo.toml  README.md
pig-latin/src/: lib.rs  main.rs
random-password/: Cargo.toml  README.md
random-password/src/: lib.rs  main.rs
rust-python-comparison/: Cargo.toml  README.md
rust-python-comparison/src/: lib.rs  main.py  main.rs
soccer-standings/: Cargo.toml
