[package]
name = "coding_contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
reqwest = "0.11.16"
serde_json = "1.0.95"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
