[package]
name = "currency-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.1", features=["derive"]}
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

